fix navbar section mobile

--- a/frontend/src/components/blog/filters/tagfilter.css
+++ b/frontend/src/components/blog/filters/tagfilter.css
@@ -1,4 +1,4 @@
-@media (max-width: 400px) {
+@media (max-width: 480px) {
   .tag-button {
     font-size: 0.75rem !important;
     padding: 0.3rem 0.5rem !important;
